Replace usage of Collectors.toList with .toList to fix sonar complain